--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
 /* Basscss Responsive Borders */
 
+@import "./lib/lg-borders";
+@import "./lib/md-borders";
 @import "./lib/sm-borders";
 
 @custom-media --breakpoint-sm (min-width: 40em);
 @custom-media --breakpoint-md (min-width: 52em);
 @custom-media --breakpoint-lg (min-width: 64em);
-
