--- a/lib/lg-borders.css
+++ b/lib/lg-borders.css
@@ -1,30 +1,30 @@
-@media (--breakpoint-md) {
+@media (--breakpoint-lg) {
 
-    .sm-b {
+    .lg-b {
         border-style: solid;
         border-width: var(--border-width);
         border-color: var(--border-color);
     }
 
-    .sm-bt {
+    .lg-bt {
         border-top-style: solid;
         border-top-width: var(--border-width);
         border-top-color: var(--border-color);
     }
 
-    .sm-br {
+    .lg-br {
         border-right-style: solid;
         border-right-width: var(--border-width);
         border-right-color: var(--border-color);
     }
 
-    .sm-bb {
+    .lg-bb {
         border-bottom-style: solid;
         border-bottom-width: var(--border-width);
         border-bottom-color: var(--border-color);
     }
 
-    .sm-bl {
+    .lg-bl {
         border-left-style: solid;
         border-left-width: var(--border-width);
         border-left-color: var(--border-color);
