--- a/lib/lg-borders.css
+++ b/lib/lg-borders.css
@@ -1,30 +1,30 @@
 @media (--breakpoint-lg) {
 
-    .lg-b {
+    .lg-border {
         border-style: solid;
         border-width: var(--border-width);
         border-color: var(--border-color);
     }
 
-    .lg-bt {
+    .lg-border-top {
         border-top-style: solid;
         border-top-width: var(--border-width);
         border-top-color: var(--border-color);
     }
 
-    .lg-br {
+    .lg-border-right {
         border-right-style: solid;
         border-right-width: var(--border-width);
         border-right-color: var(--border-color);
     }
 
-    .lg-bb {
+    .lg-border-bottom {
         border-bottom-style: solid;
         border-bottom-width: var(--border-width);
         border-bottom-color: var(--border-color);
     }
 
-    .lg-bl {
+    .lg-border-left {
         border-left-style: solid;
         border-left-width: var(--border-width);
         border-left-color: var(--border-color);
