--- a/lib/md-borders.css
+++ b/lib/md-borders.css
@@ -1,30 +1,30 @@
 @media (--breakpoint-md) {
 
-    .md-b {
+    .md-border {
         border-style: solid;
         border-width: var(--border-width);
         border-color: var(--border-color);
     }
 
-    .md-bt {
+    .md-border-top {
         border-top-style: solid;
         border-top-width: var(--border-width);
         border-top-color: var(--border-color);
     }
 
-    .md-br {
+    .md-border-right {
         border-right-style: solid;
         border-right-width: var(--border-width);
         border-right-color: var(--border-color);
     }
 
-    .md-bb {
+    .md-border-bottom {
         border-bottom-style: solid;
         border-bottom-width: var(--border-width);
         border-bottom-color: var(--border-color);
     }
 
-    .md-bl {
+    .md-border-left {
         border-left-style: solid;
         border-left-width: var(--border-width);
         border-left-color: var(--border-color);
