--- a/lib/sm-borders.css
+++ b/lib/sm-borders.css
@@ -1,30 +1,30 @@
 @media (--breakpoint-sm) {
 
-    .sm-b {
+    .sm-border {
         border-style: solid;
         border-width: var(--border-width);
         border-color: var(--border-color);
     }
 
-    .sm-bt {
+    .sm-border-top {
         border-top-style: solid;
         border-top-width: var(--border-width);
         border-top-color: var(--border-color);
     }
 
-    .sm-br {
+    .sm-border-right {
         border-right-style: solid;
         border-right-width: var(--border-width);
         border-right-color: var(--border-color);
     }
 
-    .sm-bb {
+    .sm-border-bottom {
         border-bottom-style: solid;
         border-bottom-width: var(--border-width);
         border-bottom-color: var(--border-color);
     }
 
-    .sm-bl {
+    .sm-border-left {
         border-left-style: solid;
         border-left-width: var(--border-width);
         border-left-color: var(--border-color);
